# envoy-schema

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: linttest.yml
src/envoy_schema/: __init__.py  primitive_types.py
src/envoy_schema/admin/: __init__.py
src/envoy_schema/admin/schema/: __init__.py  aggregator.py  archive.py  base.py  billing.py  certificate.py  config.py  doe.py  log.py  pricing.py  site.py  site_control.py  site_group.py  site_reading.py  uri.py
src/envoy_schema/server/: __init__.py
src/envoy_schema/server/schema/: __init__.py  function_set.py  uri.py
src/envoy_schema/server/schema/csip_aus/: __init__.py  connection_point.py
src/envoy_schema/server/schema/sep2/: __init__.py  base.py  der.py  der_control_types.py  device_capability.py  end_device.py  error.py  event.py  function_set_assignments.py  identification.py  log_events.py  metering.py  metering_mirror.py  pricing.py  primitive_types.py  pub_sub.py  response.py  time.py  types.py
tests/: conftest.py
tests/data/: notification.xml  notification_doe.xml  notification_multiple_reading.xml  subscription.xml  subscription_condition.xml
tests/unit/: test_archive_models.py  test_der.py  test_device_capability.py  test_end_device.py  test_function_set_assignments.py  test_metering_mirror.py  test_primitive_types.py  test_pub_sub.py  test_xsd_models.py
tests/unit/admin/: test_certificate.py
tests/unit/server/: test_archive_models.py  test_der.py  test_device_capability.py  test_end_device.py  test_function_set_assignments.py  test_metering.py  test_metering_mirror.py  test_pricing.py  test_primitive_types.py  test_pub_sub.py  test_xsd_models.py
tests/xsd/: csipaus-core.xsd  csipaus-ext.xsd  sep.xsd
