[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = "tests"
filterwarnings = ["error::DeprecationWarning"]

[tool.mypy]
exclude = ["tests"]

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envoy_schema"
version = "0.9.0"
dependencies = ["pydantic>=2.5.0,!=2.6.0", "pydantic_xml[lxml]>=2.12.0"]

[project.optional-dependencies]
dev = ["bandit", "flake8", "mypy", "types-python-dateutil", "types-tzlocal"]
test = ["pytest", "assertical"]

[tool.setuptools.package-data]
"envoy_schema" = ["py.typed"]
